# hirro

./: .gitignore  README.md  pyproject.toml
docs/: context-compression.md
skill_router/: __init__.py  __main__.py  agent.py  cli.py  context.py  executor.py  frontmatter.py  llm.py  loader.py  mcp.py  models.py  tools.py  whitelist.py
tests/: test_agent.py  test_executor.py  test_loader.py  test_mcp.py  test_tools.py
