[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-router"
version = "0.1.0"
description = "Route local skills with an OpenAI-compatible model and execute whitelisted commands."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
skill-router = "skill_router.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_router*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
